--- a/crystal symm/crystal symmetries.tex
+++ b/crystal symm/crystal symmetries.tex
@@ -83,7 +83,7 @@
 	\begin{equation}\label{Eqn:grand-ortho-for-trace1}
 		\implies \sum_k N_k \chi^{(m)}(C_k)\chi^{(n)*}(C_k) = |G| \delta_{nm}
 	\end{equation}
-	where the sum over $k$ is over distinct classes $C_k$. This equation provides a\textbf{ sure-shot test whether a representation is irreducible or not}, i.e., if the sum of trace squared over all matrices of a representation is $|G|$ then and only then the representation is irreducible otherwise it will be greater than $|G|$.another important result (proof in Murnaghan 1938) is that \textbf{the number of classes equals the number of irreps}. With this result we can write the trace orthogonality relation in another form as
+	where the sum over $k$ is over distinct classes $C_k$. This equation provides a\textbf{ sure-shot test whether a representation is irreducible or not}, i.e., if the sum of trace squared over all matrices of a representation is $|G|$ then and only then the representation is irreducible otherwise it will be greater than $|G|$. Another important result (proof in Murnaghan 1938) is that \textbf{the number of classes equals the number of irreps}. With this result we can write the trace orthogonality relation in another form as
 	\begin{equation}\label{Eqn:grand-ortho-for-trace2}
 		\sum_k N_n \chi^{(k)}(C_n)\chi^{(k)*}(C_m) = |G| \delta_{nm}.
 	\end{equation}
